<resources>
    <string name="app_name">toigether</string>
    <string name="welcome_page_title">Добро пожаловать в TOIGETHER!</string>
    <string name="welcome_page_text">Наслаждайтесь удобным процессом организации самых важных мероприятий в вашей жизни!</string>
    <string name="next">Далее</string>
    <string name="favourite">Избранное</string>
    <string name="choose_category">Выберите категорию события</string>
    <string name="birthday">День рождения</string>
    <string name="wedding">Свадьба</string>
    <string name="corporate_party">Корпоратив</string>
    <string name="team_building">Тимбилдинг</string>
    <string name="profile">Профиль</string>
    <string name="settings">Настройки</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_service">Выберите услуги</string>
    <string name="date">Дата</string>
    <string name="city">Город</string>
    <string name="location">Локация</string>
    <string name="service">Услуги</string>
    <string name="choose_variant">Выберите вариант</string>
    <string name="close_location">В закрытом помещении</string>
    <string name="open_location">На открытом воздухе</string>
    <string name="choose_many_variants">Выберите несколько опций</string>
    <string name="choose_all">Выбрать всё</string>
    <string name="formalization">Оформление</string>
    <string name="kitchen">Кухня</string>
    <string name="leading">Ведущий</string>
    <string name="photosession">Фотосессия</string>
    <string name="filming">Видеосъемка</string>
    <string name="show_program">Шоу-программа</string>
    <string name="entertainment_program">Развлекательная программа для гостей</string>
    <string name="ceremonies">Официальные церемонии</string>
    <string name="home">Главная</string>
    <string name="search">Поиск</string>
    <string name="meetings">Встречи</string>
    <string name="favourites">Избранное</string>
    <string name="do_generation">Создать подборку</string>
    <string name="choose_price_range">Выберите ценовой диапазон</string>
    <string name="input_sum_budget">Введите примерную сумму бюджета</string>
    <string name="max_value_slider">10.000.000 KZT</string>
    <string name="min_value_slider">300.000 KZT</string>
    <string name="min_value_budget">0 KZT</string>
    <string name="generation_results">Ваши результаты опроса</string>
    <string name="budget">Бюджет</string>
    <string name="make_generation">Сгенерировать подборку</string>
    <string name="change_answers">Изменить ответы</string>
    <string name="generation_results_header">По вашим запросам мы подобрали несколько предложений</string>
    <string name="text_example">Some text here Some more line of text should be here Some more line of text should be hgfdgfdgbvcbere Some more line of text should be here Some more line of text should be here Some more line of text should be here Some more line of text should be here \nSome morbvbvbcve line of text should be here Some more line of text should be here ome more line of text should be here Some more line of text should be here Some more line of text should be hercccccccccce \nSome more line of text should be here</string>
    <string name="interesting_events">Интересные события</string>
    <string name="categories">Категории</string>
    <string name="all">Все</string>
    <string name="top_rating">Топ рейтинг</string>
    <string name="recently_watched">Недавно смотрели</string>
    <string name="event_org_name_example">BN Event organization</string>
    <string name="make_meeting">Назначить встречу</string>
    <string name="some_text_here">Some text here</string>
    <string name="your_service_choice">Ваши выбранные услуги</string>
    <string name="return_and_change">Вернуться и изменить</string>
    <string name="how_to_contact">Как с вами связаться?</string>
    <string name="make_call">Созвониться</string>
    <string name="telegram">Telegram</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="toast_text_2">Свои заявки вы можете посмотреть в кабинете</string>
    <string name="toast_text_1">Заявка готова. С вами скоро свяжется менеджер</string>
    <string name="sort">Сортировка:</string>
    <string name="ex_name">Ассель</string>
    <string name="ex_phone">+7 700 987 65 43</string>
    <string name="contracts_with_companies">Договора с компаниями</string>
    <string name="current_events">Действующие мероприятия</string>
    <string name="past_events">Прошедшие мероприятия</string>
    <string name="frozen_events">Замороженные мероприятия</string>
    <string name="theme_choice">Выбор темы</string>
    <string name="notifications">Push-уведомления</string>
    <string name="password_change">Смена пароля</string>
    <string name="support">Служба поддержки</string>
    <string name="project">О проекте</string>
    <string name="partner">Стать партнером</string>
    <string name="faq">F.A.Q.</string>
    <string name="additional">Дополнительно</string>
    <string name="user_name">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="log_in_profile">Вход в профиль</string>
    <string name="password_error">Неверный пароль или логин</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="restore_acc">Восстановление учетной записи</string>
    <string name="enter">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="profile_creating">Создание профиля</string>
    <string name="ex_phone_exes">8 (7xx) xxx-xx-xx</string>
    <string name="create">Создать</string>
    <string name="terms_condition">Условиями пользования и Политикой конфиденциальности</string>
    <string name="by_creating_acc">Создавая аккаунт, вы соглашаетесь с</string>
    <string name="login_null">Некоторые поля остались незаполненными</string>
    <string name="password_equal">Пароли не совпадают</string>
    <string name="phone_invalid">Не валидный номер телефона</string>
    <string name="user_exist">Данный адрес уже используется</string>
    <string name="show">Показать</string>
    <string name="ex_date">22.07.2021</string>
    <string name="no_portfolio">У организации пока нет проведенных мероприятий.</string>
    <string name="back">Назад</string>
    <string name="no_menu">Стандартное меню или Меню отсутствовало</string>
    <string name="logout">Выйти</string>
    <string name="no_service">Нет данных о заказанных услугах</string>
    <string name="no_decoration">Нет данных о заказанных декорациях</string>
    <string name="addFavourite">Добавляйте организации в избранные и следите за их обновлениями!</string>
    <string name="not_found">К сожалению, ничего не нашлось</string>
    <string name="user_email">Email пользователя</string>
</resources>