<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />

    <item
        android:id="@+id/navigation_meeting"
        android:icon="@drawable/ic_meeting"
        android:title="@string/meetings" />

    <item
        android:id="@+id/navigation_favourite"
        android:icon="@drawable/ic_favourite"
        android:title="@string/favourites" />

    <item
        android:id="@+id/navigation_generation"
        android:icon="@drawable/ic_gift"
        android:title="@string/do_generation" />

</menu>