<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/white"
    android:paddingVertical="57sp">

    <TextView
        style="@style/highlighted_thin"
        android:text="@string/make_meeting"
        android:textSize="28sp"
        android:layout_marginBottom="34sp"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_service_choice"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_semi_bold"
        android:layout_marginBottom="13sp"/>

    <ListView
        android:id="@+id/servicesList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12sp"
        android:divider="@color/transparent"
        android:scrollbars="vertical"/>

    <TextView
        android:id="@+id/cancel"
        style="@style/highlighted_little"
        android:text="@string/return_and_change"
        android:layout_marginBottom="34sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_to_contact"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_semi_bold"
        android:layout_marginBottom="18sp"/>

    <androidx.appcompat.widget.AppCompatButton
        style="@style/button"
        android:id="@+id/call"
        android:layout_height="24sp"
        android:layout_width="140sp"
        android:text="@string/make_call"
        android:textSize="14sp"
        android:layout_marginBottom="11sp"/>

    <androidx.appcompat.widget.AppCompatButton
        style="@style/button_light"
        android:id="@+id/telegram"
        android:layout_height="24sp"
        android:layout_width="140sp"
        android:text="@string/telegram"
        android:textSize="14sp"
        android:layout_marginBottom="11sp"/>

    <androidx.appcompat.widget.AppCompatButton
        style="@style/button_light"
        android:id="@+id/whatsapp"
        android:layout_height="24sp"
        android:layout_width="140sp"
        android:text="@string/whatsapp"
        android:textSize="14sp" />

</LinearLayout>