<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".generation.LocationGenerationFragment"
    android:orientation="vertical"
    android:padding="18sp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_variant"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/black_black"
        android:layout_marginBottom="10sp"/>
    
    <RadioGroup
        android:id="@+id/groupLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close_location"
            android:textSize="13sp"
            android:textColor="@color/black_black"
            android:layout_marginVertical="0sp"
            />
        <RadioButton
            android:id="@+id/open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_location"
            android:textSize="13sp"
            android:textColor="@color/black_black"/>
    </RadioGroup>

</LinearLayout>