<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/login_background"
        android:scaleType="centerCrop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18sp"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/back"
            android:layout_width="16sp"
            android:layout_height="28sp"
            android:layout_alignParentStart="true"
            android:background="@drawable/ic_backward" />

        <TextView
            android:id="@+id/registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/geometria_medium"
            android:text="@string/registration"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </RelativeLayout>


    <ImageView
        android:layout_width="140sp"
        android:layout_height="140sp"
        android:src="@drawable/ic_logo"
        android:layout_marginTop="18sp"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in_profile"
        android:textColor="@color/white"
        android:fontFamily="@font/geometria_medium"
        android:textSize="28sp"

        android:layout_marginBottom="23sp"
        app:layout_constraintBottom_toTopOf="@+id/input_bars"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:id="@+id/input_bars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:paddingHorizontal="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="56sp"

            android:background="@drawable/input_log_background"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="21sp"
            android:fontFamily="@font/geometria"
            android:hint="@string/user_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/cheerless_white"
            android:textSize="20sp"

            android:padding="17sp"
            android:layout_marginBottom="14sp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="56sp"

            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:background="@drawable/input_log_background"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="21sp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textColorHint="@color/cheerless_white"
            android:fontFamily="@font/geometria"
            android:hint="@string/password"

            android:padding="17sp"
            android:importantForAutofill="no" />
    </LinearLayout>

    <TextView
        android:id="@+id/warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_error"
        android:textSize="15sp"
        android:fontFamily="@font/geometria_medium"
        android:textColor="@color/red_warning"

        android:visibility="invisible"
        android:layout_marginTop="5sp"
        android:layout_marginHorizontal="18sp"
        app:layout_constraintTop_toBottomOf="@id/input_bars"
        app:layout_constraintLeft_toLeftOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/restore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="54sp"
        android:paddingHorizontal="18sp"
        app:layout_constraintTop_toBottomOf="@+id/input_bars">
        <TextView
            android:id="@+id/forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:fontFamily="@font/geometria"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <TextView
            android:id="@+id/restoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restore_acc"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:fontFamily="@font/geometria_bold"
            android:layout_marginStart="2sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/forgot"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        style="@style/button"
        android:id="@+id/enter"
        android:layout_height="58sp"
        android:layout_width="match_parent"
        android:text="@string/enter"
        android:textSize="18sp"
        android:fontFamily="@font/geometria_bold"
        android:layout_marginHorizontal="18sp"
        android:layout_marginTop="28sp"
        app:layout_constraintTop_toBottomOf="@+id/restore"/>

</androidx.constraintlayout.widget.ConstraintLayout>