<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".generation.TabLayoutFragment"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <TextView
        style="@style/ordinary_text"
        android:id="@+id/categoryName"
        android:layout_weight = "0"
        android:text=""
        android:layout_gravity="center"
        android:paddingVertical="5sp"
        android:layout_marginTop="21sp" />
    <TextView
        style="@style/highlighted_big"
        android:layout_weight = "0"
        android:text="@string/choose_service"
        android:textSize="16sp"
        android:layout_gravity="center"/>

    <HorizontalScrollView
        android:id="@+id/scroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.shuhart.stepview.StepView
                app:sv_stepViewStyle="@style/StepView"
                android:id="@+id/step_view"
                android:layout_width="750sp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                app:sv_stepLineWidth="1dp"
                app:sv_stepPadding="4dp"
                app:sv_selectedTextColor="@color/orange"
                app:sv_nextTextColor="@color/gray_step"
                app:sv_doneTextColor="@color/orange"

                app:sv_selectedStepNumberColor="@color/white"
                app:sv_nextStepLineColor="@color/gray_step"
                app:sv_doneStepLineColor="@color/orange"
                app:sv_doneStepMarkColor="@color/white"

                app:sv_selectedCircleColor="@color/orange"
                app:sv_nextStepCircleColor="@color/light_gray"
                app:sv_doneCircleColor="@color/orange"

                app:sv_doneCircleRadius="24sp"
                app:sv_selectedCircleRadius="24sp"

                app:sv_stepNumberTextSize="16sp"
                app:sv_animationType="All"
                app:sv_stepsNumber="6"
                app:sv_nextStepCircleEnabled="true"
                app:sv_typeface="@font/montserrat_medium"
                app:sv_textSize="15sp" />

        </LinearLayout>
    </HorizontalScrollView>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pagerGeneration"
        android:layout_width="match_parent"
        android:layout_height="400sp"
        android:layout_weight = "1"/>


    <RelativeLayout
        android:id="@+id/buttonsRow"
        android:layout_width="match_parent"
        android:layout_height="105sp"
        android:layout_weight="0"
        android:gravity="center"
        android:layout_marginVertical="18sp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next"
            style="@style/button"
            android:layout_centerInParent="true"
            android:text="@string/next"
            android:visibility="visible" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/button"
            android:id="@+id/makeGen"
            android:text="@string/make_generation"
            android:paddingHorizontal="18sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"/>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/button"
            android:id="@+id/change"
            android:text="@string/change_answers"
            android:background="@drawable/app_button_cancel"
            android:textColor="@color/blue_black"
            android:paddingHorizontal="18sp"
            android:visibility="invisible"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>